# homun-core

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/browser-automation/: Cargo.toml
crates/browser-automation/src/: artifacts.rs  browser_loop.rs  client.rs  error.rs  lib.rs  policy.rs  sidecar.rs  task_executor.rs  types.rs  url_policy.rs
crates/browser-automation/tests/: browser_loop.rs  client.rs  contracts.rs  policy.rs  task_executor.rs  url_policy.rs
crates/capabilities/: Cargo.toml
crates/capabilities/src/: audit.rs  browser_provider.rs  cached_provider.rs  channel.rs  composio.rs  error.rs  facade.rs  lib.rs  mcp.rs  policy.rs  provider.rs  registry.rs  search.rs  skill_plugin.rs  task_runtime_bridge.rs  types.rs  workflow_routing.rs
crates/capabilities/tests/: browser_provider.rs  channel.rs  composio_provider.rs  contracts.rs  facade.rs  mcp_provider.rs  mcp_stdio.rs  policy.rs  provider_registry.rs  skill_plugin_registry.rs  task_runtime_bridge.rs  triggers.rs
crates/desktop-gateway/: Cargo.toml  last_prompt.txt
crates/desktop-gateway/examples/: brain_materialize_smoke.rs  trenitalia_live.rs
crates/desktop-gateway/src/: agent_journal.rs  apply_patch.rs  attachments.rs  brain_adapter.rs  browser_loop_controller.rs  browser_safety.rs  chat_store.rs  db_migrate.rs  document_content.rs  host_computer_gateway.rs  inference_transport.rs  integrity_api.rs  landlock_fence.rs  lib.rs  linked_memory_repair.rs  main.rs  markers.rs  mcp_http.rs  mcp_registry.rs  model_client.rs  model_normalize.rs  model_registry.rs  novnc_proxy.rs  panic_log.rs  pdf_render.rs  plan_directive.rs  plugin_packages.rs  privacy_guard.rs  process_skills.rs  project_graph_commit.rs  provider_usage.rs  sandbox.rs  scaffold.rs  seatbelt.rs  semantic_decision.rs  setup_computer.rs  skill_security.rs  skills.rs  skills_catalog.rs  steering_control.rs  (+17 more)
crates/desktop-gateway/tests/: inference_transport_inventory.rs  linked_memory_read_only.rs  linux_sandbox.rs  project_graph_commit.rs  usage_accounting.rs  usage_ledger.rs  usage_suggestions.rs  workspace_delete.rs
crates/engine/: Cargo.toml
crates/engine/src/: agent_loop.rs  browse.rs  browser.rs  config.rs  context_budget.rs  contract.rs  events.rs  execution_journal.rs  lib.rs  loop_checkpoint.rs  loop_state.rs  markers.rs  model_normalize.rs  outcome.rs  payload.rs  plan.rs  prompt_packets.rs  text.rs  tools.rs  trace.rs  turn_trace.rs
crates/host-computer/: Cargo.toml
crates/host-computer/src/: artifact.rs  client.rs  framing.rs  grants.rs  lib.rs  policy.rs  protocol.rs  redaction.rs  service.rs  session.rs  supervisor.rs  transport.rs
crates/host-computer/tests/: action_contract.rs  artifact_contract.rs  client_contract.rs  framing_contract.rs  grant_store.rs  native_contract.rs  policy_matrix.rs  protected_target_contract.rs  protocol_contract.rs  redaction_contract.rs  service_contract.rs  snapshot_contract.rs  supervisor_contract.rs  takeover_contract.rs
crates/inference/: Cargo.toml
crates/inference/examples/: mistralrs_smoke.rs
crates/inference/src/: anthropic.rs  json_parse.rs  json_runtime_provider.rs  lib.rs  mistralrs_provider.rs  openai_compat.rs  policy.rs  provider.rs  router.rs  streaming.rs
crates/local-computer-session/: Cargo.toml
crates/local-computer-session/src/: lib.rs  manager.rs  policy.rs  read_model.rs  redaction.rs  store.rs  types.rs
crates/local-computer-session/tests/: host_apps_compatibility.rs  policy_takeover.rs  read_model_redaction.rs  session_lifecycle.rs
crates/memory/: Cargo.toml
crates/memory/src/: consolidate.rs  crypto.rs  embedding.rs  error.rs  evolution.rs  facade.rs  graph.rs  graphify.rs  graphify_query.rs  integrity.rs  learn.rs  learning_ui.rs  lib.rs  lifecycle.rs  operations.rs  policy.rs  publication.rs  recall.rs  redaction.rs  refs.rs  schema.rs  search.rs  service.rs  sources.rs  store.rs  types.rs  ui.rs  vector_index.rs  wiki.rs  wiki_sync.rs
crates/memory/tests/: contracts.rs  crypto.rs  extraction.rs  facade.rs  graph.rs  graphify_adapter.rs  graphify_query.rs  integrity_audit.rs  integrity_repair.rs  layered_admission.rs  learning_ui.rs  lifecycle.rs  linked_memory_firewall.rs  memory_evolution.rs  multi_source_recall.rs  operations.rs  policy.rs  pool.rs  publication.rs  routine_inference.rs  schema.rs  search.rs  source_candidates.rs  source_grants.rs  sources.rs  sqlite_store.rs  ui_read_model.rs  wiki.rs  wiki_sync.rs  workspace_purge.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: agentic.rs  audit.rs  brain.rs  driver.rs  error.rs  execution.rs  lib.rs  memory.rs  planner.rs  step_executor.rs  subagent_workflow.rs  tool_corpus.rs  tool_index.rs  types.rs  ui.rs
crates/orchestrator/tests/: audit.rs  brain.rs  subagent_workflow.rs  tool_index.rs
crates/process-manager/: Cargo.toml
crates/process-manager/src/: discovery.rs  error.rs  health.rs  lib.rs  log_buffer.rs  manager.rs  sidecars.rs  store.rs  supervisor.rs  types.rs
crates/process-manager/tests/: contracts.rs  health.rs  local_supervisor.rs  log_buffer.rs  manager.rs  runtime_control.rs  sidecars.rs  store.rs
crates/skill-runtime/: Cargo.toml
crates/skill-runtime/src/: error.rs  lib.rs  policy.rs  process_runner.rs  provider.rs  runner.rs  types.rs  wasm_runner.rs
crates/skill-runtime/tests/: contracts.rs  policy.rs  process_runner.rs  provider.rs  task_runtime_bridge.rs  wasm_runner.rs
crates/subagents/: Cargo.toml
crates/subagents/examples/: stream_probe.rs
crates/subagents/src/: agents.rs  audit.rs  capability_bridge.rs  error.rs  graph.rs  lib.rs  memory_agent.rs  orchestrator.rs  permissions.rs  prompt_guard.rs  runner.rs  runtime.rs  task_runtime_bridge.rs  tool_access.rs  types.rs  workflow.rs
crates/task-runtime/: Cargo.toml
crates/vault/: Cargo.toml
crates/vault/src/: lib.rs  (+6 more)
runtimes/channel-telegram/: Cargo.toml
runtimes/channel-whatsapp/: Cargo.toml  README.md
(+1157 files in other folders)
