[workspace]
members = [
    "crates/memory",
    "crates/subagents",
    "crates/capabilities",
    "crates/task-runtime",
    "crates/browser-automation",
    "crates/process-manager",
    "crates/local-computer-session",
    "crates/secrets",
    "crates/vault",
    "crates/skill-runtime",
    "crates/orchestrator",
    "crates/context-compression",
    "crates/desktop-gateway",
    "crates/inference",
    "crates/process-skill",
]
resolver = "3"
