[workspace]
members = [
    "crates/inference-usage",
    "crates/memory",
    "crates/subagents",
    "crates/capabilities",
    "crates/engine",
    "crates/task-runtime",
    "crates/browser-automation",
    "crates/process-manager",
    "crates/local-computer-session",
    "crates/secrets",
    "crates/vault",
    "crates/skill-runtime",
    "crates/orchestrator",
    "crates/context-compression",
    "crates/desktop-gateway",
    "crates/inference",
    "crates/process-skill",
]
resolver = "3"
