[package]
name = "local-first-browser-automation"
version = "0.1.0"
edition = "2024"

[dependencies]
local-first-task-runtime = { path = "../task-runtime" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
