[package]
name = "local-first-capabilities"
version = "0.1.0"
edition = "2024"

[dependencies]
local-first-task-runtime = { path = "../task-runtime" }
local-first-browser-automation = { path = "../browser-automation" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
