[package]
name = "local-first-capabilities"
version = "0.1.0"
edition = "2024"

[dependencies]
local-first-task-runtime = { path = "../task-runtime" }
local-first-browser-automation = { path = "../browser-automation" }
local-first-context-compression = { path = "../context-compression" }
local-first-secrets = { path = "../secrets" }
ed25519-dalek = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = "0.3"
