[package]
name = "local-first-desktop-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
local-first-context-compression = { path = "../context-compression" }
local-first-capabilities = { path = "../capabilities" }
local-first-browser-automation = { path = "../browser-automation" }
local-first-inference = { path = "../inference" }
local-first-local-computer-session = { path = "../local-computer-session" }
local-first-memory = { path = "../memory" }
local-first-orchestrator = { path = "../orchestrator" }
local-first-process-manager = { path = "../process-manager" }
local-first-secrets = { path = "../secrets" }
local-first-subagents = { path = "../subagents" }
local-first-task-runtime = { path = "../task-runtime" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }

[features]
# mistral.rs is the default cross-OS local backbone (ADR 0007). Build with
# `--no-default-features` for a light build that falls back to the MLX backend.
default = ["local-mistralrs"]
local-mistralrs = ["local-first-inference/local-mistralrs"]
