[package]
name = "local-first-desktop-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
# Outbound WebSocket client to proxy the contained computer's noVNC stream
# (gateway -> homun-cc:6080) through the gateway's own public origin. Plain ws://
# over the internal/loopback network, so no TLS features are needed here.
tokio-tungstenite = "0.29"
local-first-context-compression = { path = "../context-compression" }
local-first-capabilities = { path = "../capabilities" }
local-first-browser-automation = { path = "../browser-automation" }
local-first-inference = { path = "../inference" }
local-first-local-computer-session = { path = "../local-computer-session" }
local-first-memory = { path = "../memory" }
local-first-orchestrator = { path = "../orchestrator" }
local-first-process-skill = { path = "../process-skill" }
local-first-secrets = { path = "../secrets" }
local-first-subagents = { path = "../subagents" }
local-first-task-runtime = { path = "../task-runtime" }
# PDF ingestion for chat attachments: pdfium-render binds (at runtime, via
# libloading) to the pdfium native lib for BOTH text-layer extraction (born-digital
# PDFs) and page rasterization (scanned PDFs → images for the vision model). image
# (0.25, already in the tree) encodes the rendered pages to JPEG. thread_safe guards
# the non-reentrant pdfium FFI when chat turns ingest concurrently.
pdfium-render = { version = "0.8", features = ["image", "thread_safe"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# PDF AUTHORING (the assistant produces a PDF): the model writes Markdown, we render
# it in-process to a paginated PDF. printpdf uses the built-in base-14 fonts (no font
# file to ship) so this ALWAYS works — no Docker/sidecar/UI/network/font dependency.
printpdf = "0.7"
pulldown-cmark = { version = "0.12", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
# Extracting ClawHub skill ZIP packages on install.
zip = { version = "2", default-features = false, features = ["deflate"] }

# umask(0077) at startup so the plaintext SQLite stores are born owner-only (0600).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

