[package]
name = "local-first-host-computer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
