[package]
name = "local-first-memory"
version = "0.1.0"
edition = "2024"

[features]
usearch-index = ["dep:usearch"]

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
local-first-vault = { path = "../vault" }
usearch = { version = "2.25.3", default-features = false, optional = true }
