[package]
name = "local-first-process-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
