[package]
name = "local-first-skill-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
local-first-capabilities = { path = "../capabilities" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
url = "2"

[dev-dependencies]
local-first-task-runtime = { path = "../task-runtime" }
tempfile = "3"
