[package]
name = "local-first-subagents"
version = "0.1.0"
edition = "2024"

[dependencies]
local-first-capabilities = { path = "../capabilities" }
local-first-memory = { path = "../memory" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
