[package]
name = "local-first-task-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
# jiff powers DST-aware calendar recurrence (daily/weekly at a wall-clock time in
# a named timezone). Kept internal to `recurrence`; the rest of the crate stays on
# `time` and conversions happen via unix seconds. `time`'s local-offset is unsound
# in multithreaded programs, which is why a dedicated tz library is used here.
jiff = "0.2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "serde"] }
