[package]
name = "local-first-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-first-secrets = { path = "../secrets" }
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
