# Standalone sidecar — intentionally NOT part of the root Cargo workspace, so the
# gateway never compiles wa-rs (heavy: libsignal/noise/protobuf) and its builds
# stay fast. The gateway talks to this process over the local channel protocol.
[package]
name = "channel-whatsapp"
version = "0.1.0"
edition = "2024"
description = "WhatsApp channel bridge sidecar (wa-rs) for the local-first assistant"

# Empty [workspace] detaches this crate from the parent repo's workspace.
[workspace]

[dependencies]
# wa-rs (homunbot/wa-rs) + the sub-crates the canonical example uses.
wa-rs = { git = "https://github.com/homunbot/wa-rs" }
wa-rs-core = { git = "https://github.com/homunbot/wa-rs", package = "wa-rs-core" }
wa-rs-proto = { git = "https://github.com/homunbot/wa-rs", package = "wa-rs-proto" }
wa-rs-tokio-transport = { git = "https://github.com/homunbot/wa-rs", package = "wa-rs-tokio-transport" }
wa-rs-ureq-http = { git = "https://github.com/homunbot/wa-rs", package = "wa-rs-ureq-http" }

tokio = { version = "1", features = ["full"] }
qrcode = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
# C2/C3: local HTTP server (receive /send commands from the gateway) + client
# (forward inbound messages to the gateway). http-only, no TLS (localhost).
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# Compile SQLite from source (bundled) so the bridge links on Windows too. It's
# pulled transitively (wa-rs -> diesel -> libsqlite3-sys); without `bundled` the
# MSVC linker can't find a system `sqlite3.lib` and fails with LNK1181. Declaring
# it here as a direct dep enables `bundled` for the transitive copy via cargo
# feature unification. macOS/Linux build the vendored sources fine too.
libsqlite3-sys = { version = "0.37", features = ["bundled"] }

# umask(0077) at startup: the WhatsApp session DB is born owner-only (0600).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
