[package]
name = "local-first-desktop"
version = "0.1.0"
description = "Local-first personal assistant desktop shell"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
