[package]
name = "local-first-desktop"
version = "0.1.0"
description = "Local-first personal assistant desktop shell"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
local-first-capabilities = { path = "../../../crates/capabilities" }
local-first-local-computer-session = { path = "../../../crates/local-computer-session" }
local-first-memory = { path = "../../../crates/memory" }
local-first-process-manager = { path = "../../../crates/process-manager" }
local-first-subagents = { path = "../../../crates/subagents" }
local-first-task-runtime = { path = "../../../crates/task-runtime" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[workspace]
